增加 eurake 和 fegin依赖

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
 <html>
 <head>
 <meta charset="utf-8"/>
@@ -103,31 +103,22 @@
 
     </div>
     
-    <!--  Root element of PhotoSwipe. Must have class pswp.  -->
 <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
-    <!--  Background of PhotoSwipe. 
-         It's a separate element as animating opacity is faster than rgba().  -->
     <div class="pswp__bg"></div>
 
-    <!--  Slides wrapper with overflow:hidden.  -->
     <div class="pswp__scroll-wrap">
 
-        <!--  Container that holds slides. 
-            PhotoSwipe keeps only 3 of them in the DOM to save memory.
-            Don't modify these 3 pswp__item elements, data is added later on.  -->
         <div class="pswp__container">
             <div class="pswp__item"></div>
             <div class="pswp__item"></div>
             <div class="pswp__item"></div>
         </div>
 
-        <!--  Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed.  -->
         <div class="pswp__ui pswp__ui--hidden">
 
             <div class="pswp__top-bar">
 
-                <!--   Controls are self-explanatory. Order can be changed.  -->
 
                 <div class="pswp__counter"></div>
 
@@ -139,7 +130,6 @@
 
                 <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
 
-                <!--  element will get class pswp__preloader--active when preloader is running  -->
                 <div class="pswp__preloader">
                     <div class="pswp__preloader__icn">
                       <div class="pswp__preloader__cut">
@@ -172,7 +162,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/photoswipe.js"></script>
 <script src="js/photoswipe-ui-default.min.js"></script>
-<script type="text/javascript">
+<script type="text/javascript" >
     var initPhotoSwipeFromDOM = function(gallerySelector) {
 
     // 解析来自DOM元素幻灯片数据（URL，标题，大小...）
